# aniGamerPlus

./: .gitignore  Dockerfile  README.md  config-sample.toml  config.toml  docker-compose.yml  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/workflows/: Python-build.yml  Release-build.yml
.serena/: project.yml
docs/: COMMANDS.md  CONFIG_MIGRATION.md  CONFIG_REFACTORING_SUMMARY.md  COOKIE_INTEGRATION.md  COOKIE_MANAGEMENT.md  DASHBOARD_DEVELOPMENT.md  DOCUMENTATION_OVERHAUL.md  FRONTEND_REFACTORING_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  LEGACY_REMOVAL.md  PYTHON_VERSION_UPDATE.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  REFACTORING_NAMING.md  REFACTORING_SUMMARY.md  REFACTORING_SUMMARY_ZH_TW.md  REQUESTS_TO_HTTPX_MIGRATION.md  RESTRUCTURE_SUMMARY.md  SETTINGS_MIGRATION.md  SN_LIST_INTEGRATION.md  SPA_MIGRATION.md  USAGE_GUIDE.md  UV_USAGE_GUIDE.md
scripts/: __init__.py  build_dashboard.py
src/backend/: ani_gamer_next.py  anime.py  app.py  color_print.py  config.py  config_manager.py  constants.py  cookie_manager.py  danmu.py  danmu_formatter.py  dashboard_server.py  downloader.py  filename_builder.py  ftp_uploader.py  http_client.py  m3u8_parser.py  schema.py  utils.py
src/frontend/: index.html  tailwind.config.js  vite.config.js
src/frontend/src/: app.js
src/frontend/src/components/: DarkMode.js  ProgressBar.js  Switch.js  Tab.js  Toast.js
src/frontend/src/styles/: main.css
src/frontend/src/utils/: api.js  config-manager.js  monitor.js
